Addition of a billing system with discount/Ajout d'un système de facturation avec remise

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "swagger": "ng-openapi-gen --input swagger/swagger.yaml --output src/app/api",
+    "server": "http://13.38.17.45:8080"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +21,11 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "jspdf": "^2.5.1",
     "ng-openapi-gen": "^0.24.1",
     "ng-swagger-gen": "^2.3.1",
+    "ngx-spinner": "^15.0.1",
+    "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
