--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-swagger-gen": "^2.3.1",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.1.0",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -35,6 +36,7 @@
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
