--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "ng-openapi-gen": "^0.24.1",
     "ng-swagger-gen": "^2.3.1",
@@ -35,6 +37,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
